sonarr/sonarr-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: sonarr-deployment
  namespace: mediaserver
  labels:
    app: sonarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
      - image: linuxserver/sonarr
        name: sonarr
        ports:
        - containerPort: 8989
        resources: {}
        volumeMounts:
        - mountPath: /tv
          name: sonarr-media
        - mountPath: /downloads
          name: sonarr-data
        - mountPath: /config
          name: sonarr-config
      restartPolicy: Always
      volumes:
      - name: sonarr-media
        nfs:
          server: 192.168.178.33
          path: "/volume1/Series"
      - name: sonarr-data
        nfs:
          server: 192.168.178.33
          path: "/volume1/openflixr/"
      - name: sonarr-config
        nfs:
          server: 192.168.178.33
          path: "/volume1/openflixr/sonarr/config"
status: {}
