sonarr/nzbget-ingress-external.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nzbget-external
  namespace: mediaserver
  labels:
    traffic-type: external
  annotations:
    traefik.frontend.rule.type: PathPrefix
    traefik.frontend.redirect.entryPoint: https
    traefik.frontend.redirect.regex: ^http://(.*)
    #traefik.frontend.redirect.replacement: https://$1
    #ingress.kubernetes.io/auth-type: basic
    ingress.kubernetes.io/auth-secret: ingress-auth
spec:
  rules:
  - host: nzbget.cloud.anjokolk.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nzbget-service
          servicePort: 6789
  - host: nzbget.cloud.oraperf.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nzbget-service
          servicePort: 6789
