sonarr/sonarr-ingress-internal.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sonarr
  namespace: mediaserver
  annotations:
    traefik.frontend.rule.type: PathPrefix
spec:
  rules:
  - host: sonarr.internal.anjokolk.com
    http:
      paths:
      - path: /
        backend:
          serviceName: sonarr-service
          servicePort: 8989
